Fixed Grave-System (over and over again)  -> You can now die in Liquid  -> If no grave position is found, it takes the block above the highest block in world (on x,z of death location)  Fixed Vein & Tree Chopper  -> You could change the Item to prevent damage to it
 Added Config support for Home and Shop commands
 Changed and added Some translations
 Changed the way you can increase the maximum Enchantment Level